# silklame

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: codingBuffer.h  dllexport.h  endian.h  lameCoder.h  silkCoder.h
src/: codingBuffer.c  endian.c  lameCoder.c  silkCoder.c
